[gd_scene load_steps=21 format=3 uid="uid://g1h5sg03byda"]

[ext_resource type="PackedScene" uid="uid://cd7hvajdquh6b" path="res://scenes/Enemies/baseEnemy.tscn" id="1_315n6"]
[ext_resource type="Texture2D" uid="uid://bb8h62iiecwhm" path="res://assets/Enemies/Goblin/Idle.png" id="2_axafq"]
[ext_resource type="Script" path="res://scenes/Enemies/goblin.gd" id="2_muatk"]
[ext_resource type="Texture2D" uid="uid://cwqkkyk5vurwy" path="res://assets/Enemies/Goblin/Attack.png" id="3_ioo4f"]
[ext_resource type="Texture2D" uid="uid://dpjwn4qk3urr8" path="res://assets/Enemies/Goblin/Run.png" id="5_pjh3q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5pwcb"]
atlas = ExtResource("3_ioo4f")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6vmv"]
atlas = ExtResource("3_ioo4f")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5ony"]
atlas = ExtResource("3_ioo4f")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwi0c"]
atlas = ExtResource("2_axafq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_56syf"]
atlas = ExtResource("2_axafq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2if"]
atlas = ExtResource("2_axafq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0066"]
atlas = ExtResource("2_axafq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5elfp"]
atlas = ExtResource("5_pjh3q")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5au5c"]
atlas = ExtResource("5_pjh3q")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt7kg"]
atlas = ExtResource("5_pjh3q")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_56un3"]
atlas = ExtResource("5_pjh3q")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_sa8du"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pwcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6vmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5ony")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwi0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56syf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0066")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5elfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5au5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt7kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56un3")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4fk4h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tuiqn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vrbrf"]

[node name="CharacterBody2D" instance=ExtResource("1_315n6")]
script = ExtResource("2_muatk")

[node name="AnimatedSprite2D" parent="." index="0"]
scale = Vector2(1, 1)
sprite_frames = SubResource("SpriteFrames_sa8du")
animation = &"idle"

[node name="detection_area" parent="." index="1"]
scale = Vector2(1.24, 1.44948)
collision_mask = 7

[node name="CollisionShape2D" parent="detection_area" index="0"]
scale = Vector2(17.16, 13.16)
shape = SubResource("CircleShape2D_4fk4h")

[node name="enemy_hitbox" parent="." index="2"]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" parent="enemy_hitbox" index="0"]
position = Vector2(-4, 3)
scale = Vector2(3.8, 3.16)
shape = SubResource("CircleShape2D_tuiqn")

[node name="hitbox" parent="." index="6"]
position = Vector2(-5, 2)
shape = SubResource("CapsuleShape2D_vrbrf")

[node name="hit" type="Timer" parent="." index="7"]
wait_time = 0.5

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_damage_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]

[editable path="SoftCollision"]
